--- a/_config.yml
+++ b/_config.yml
@@ -10,42 +10,46 @@ baseurl: ''
 # The language of the webpage › http://www.lingoes.net/en/translator/langcode.htm
 # If it has the same name as one of the files in folder `_data/locales`, the layout language will also be changed,
 # otherwise, the layout language will use the default value of 'en'.
-lang: en
+lang: fr-FR
 
 # Additional parameters for datetime localization, optional. › https://github.com/iamkun/dayjs/tree/dev/src/locale
 prefer_datetime_locale:
 
 # Change to your timezone › http://www.timezoneconverter.com/cgi-bin/findzone/findzone
-timezone:
+timezone: Europe/Paris
 
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Chirpy                          # the main title
+title: Les Karibous                          # the main title
 
-tagline: A text-focused Jekyll theme   # it will display as the sub-title
+tagline: Equipe Française de robotique    # it will display as the sub-title
 
 description: >-                        # used by seo meta and the atom feed
-  A minimal, responsive, and powerful Jekyll theme for presenting professional writing.
+  Les Karibous, c'est une équipe de robotique fondée en 2011 avec la ferme intention de montrer que la robotique peut être simple et fun à réaliser. Depuis cette époque, elle participe chaque année à La Coupe de France de Robotique organisée par l'association Planète Science ainsi qu'à la MakerFight !
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
 url: 'https://leskaribous.github.io'
 
 github:
-  username: github_username             # change to your github username
+  username: LesKaribous             # change to your github username
 
 twitter:
-  username: twitter_username            # change to your twitter username
+  username: LesKaribous            # change to your twitter username
+
+twitch:
+  username: barbatroniclive
 
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: your_full_name
-  email: example@doamin.com             # change to your email address
+  name: LesKaribous
+  email: team.karibous@gmail.com             # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    - https://twitter.com/username      # change to your twitter homepage
-    - https://github.com/username       # change to your github homepage
+    - https://twitter.com/LesKaribous      # change to your twitter homepage
+    - https://github.com/LesKaribous       # change to your github homepage
+    - https://www.twitch.tv/barbatroniclive
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
     # - https://www.linkedin.com/in/username
@@ -80,10 +84,10 @@ theme_mode:   # [light|dark]
 # will be added to all image (site avatar & posts' images) paths starting with '/'
 #
 # e.g. 'https://cdn.com'
-img_cdn:
+img_cdn: 
 
 # the avatar on sidebar, support local or CORS resources
-avatar:
+avatar: assets/img/K_SIMPLE.png
 
 # boolean type, the global switch for ToC in posts.
 toc: true
