add sponsorship page and data

--- a/_config.yml
+++ b/_config.yml
@@ -141,6 +141,9 @@ collections:
   tabs:
     output: true
     sort_by: order
+  sponsors:
+    output: false
+    sort_by: order
 
 defaults:
   - scope:
