--- a/_config.yml
+++ b/_config.yml
@@ -30,6 +30,7 @@ description: >-                        # used by seo meta and the atom feed
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
 url: 'https://leskaribous.github.io'
+permalink: pretty
 
 github:
   username: LesKaribous             # change to your github username
