--- a/.github/workflows/pages-deploy.yml
+++ b/.github/workflows/pages-deploy.yml
@@ -22,13 +22,8 @@ jobs:
       - name: Setup Ruby
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: 3.1.0
-          bundler-cache: false
-      
-      - name: Update Bundler
-        run: |
-          gem install bundler
-          bundle update
+          ruby-version: 2.7
+          bundler-cache: true
 
       - name: Deploy
         run: bash tools/deploy.sh
