add giscus for comments

--- a/_config.yml
+++ b/_config.yml
@@ -94,7 +94,7 @@ avatar: assets/img/K_SIMPLE.png
 toc: true
 
 comments:
-  active:         # The global switch for posts comments, e.g., 'disqus'.  Keep it empty means disable
+  active: giscus  # The global switch for posts comments, e.g., 'disqus'.  Keep it empty means disable
   # The active options are as follows:
   disqus:
     shortname:    # fill with the Disqus shortname. › https://help.disqus.com/en/articles/1717111-what-s-a-shortname
@@ -104,7 +104,7 @@ comments:
     issue_term:   # < url | pathname | title | ...>
   # Giscus options › https://giscus.app
   giscus:
-    repo:             # <gh-username>/<repo>
+    repo: LesKaribous/site-comments            # <gh-username>/<repo>
     repo_id:
     category:
     category_id:
