add id an category

--- a/_config.yml
+++ b/_config.yml
@@ -105,9 +105,9 @@ comments:
   # Giscus options › https://giscus.app
   giscus:
     repo: LesKaribous/site-comments            # <gh-username>/<repo>
-    repo_id:
-    category:
-    category_id:
+    repo_id: R_kgDOPD5leA
+    category: Commentaires Posts
+    category_id: DIC_kwDOPD5leM4CsNdK
     mapping:          # optional, default to 'pathname'
     input_position:   # optional, default to 'bottom'
     lang:             # optional, default to the value of `site.lang`
