--- a/_config.yml
+++ b/_config.yml
@@ -104,10 +104,10 @@ comments:
     issue_term:   # < url | pathname | title | ...>
   # Giscus options › https://giscus.app
   giscus:
-    repo: LesKaribous/site-comments            # <gh-username>/<repo>
-    repo_id: R_kgDOPD5leA
-    category: Commentaires Posts
-    category_id: DIC_kwDOPD5leM4CsNdK
+    repo: 'LesKaribous/site-comments'            # <gh-username>/<repo>
+    repo_id: 'R_kgDOPD5leA'
+    category: 'Commentaires Posts'
+    category_id: 'DIC_kwDOPD5leM4CsNdK'
     mapping:          # optional, default to 'pathname'
     input_position:   # optional, default to 'bottom'
     lang:             # optional, default to the value of `site.lang`
